@@ -8,14 +8,12 @@ SUBDIRS =								\
 	po								\
 	$(PYTHON_SUBDIR)
 
+AUTOMAKE_OPTIONS =							\
+	1.8								\
+	dist-bzip2
+
 distclean-local:
 	rm -rf *.spec *.cache *~
-
-dist-bz2: dist
-	zcat $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.gz | \
-	  bzip2 --best -c > $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.bz2
-
-distcheck-bz2: distcheck dist-bz2
 
 rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
