@@ -1,3 +1,9 @@
+2005-06-28	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, autogen.sh, Makefile.am: Merge build framework
+	  changes from Thunar.
+	* po/libexo-0.3.pot, po/*.po: Run `gmake update-po'.
+
 2005-06-27	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-bar.c: G_DEFINE_TYPE already defines a parent class
